@@ -1,0 +1,7 @@
+<xsl:transform
+  xmlns:xsl="http://www.w3.org/1999/XSL/Transform"
+  version="1.0">
+  <xsl:template match="/">
+    <xsl:copy-of select="."/>
+  </xsl:template>     
+</xsl:transform>
